# gearscorebot-1

./: e7db.xlsx  examples.db  guide.py  herodb.py  main.py  pyproject.toml  stayingalive.py
templates/: index.html
